fix: set project language level to Java 21, fix Thread API usage
misc.xml: JDK_17 → JDK_21 to enable virtual threads, threadId(),
Thread.ofPlatform(). Replace ofPlatform() with new Thread() in demos
(same semantics, simpler). threadId() replaces deprecated getId().

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>